fix: generated strategy & immutable list